# okfn_iati

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sample.py
.github/workflows/: publish-pypi.yml  python-tests.yml
data-samples/: README.md  sample_activities.csv
data-samples/csv_folders/: README.md
data-samples/csv_folders/BCIE-2012-12-18/: activities.csv  contact_info.csv  documents.csv  indicator_periods.csv  indicators.csv  results.csv  sectors.csv  transactions.csv
data-samples/csv_folders/CAF/: activities.csv  activity_date.csv  contact_info.csv  descriptions.csv  documents.csv  indicator_periods.csv  indicators.csv  locations.csv  participating_orgs.csv  results.csv  sectors.csv  summary.txt  transactions.csv
data-samples/csv_folders/IADBArgentina/: activities.csv  activity_date.csv  budgets.csv  contact_info.csv  country_budget_items.csv  descriptions.csv  documents.csv  indicator_periods.csv  indicators.csv  (+6 more)
data-samples/organization-files/: 3fi-org-back.xml  3fi-org.xml  BE-BCE_KBO-0420656336-back.xml  BE-BCE_KBO-0420656336.xml  CAF-OrganizationFile.xml  IATI_ORG.xml  IATI_ORG_test.xml  README.md  ares-org-back.xml  ares-org.xml  asian-dev-bank-org.xml
data-samples/xml/: CAF-ActivityFile-2025-10-10-back.xml  CAF-ActivityFile-2025-10-10.xml  README.md  acfspain-co.xml  bcie-2025-12-12.xml  bcie-2025-12-16.xml  bcie-2025-12-17.xml  bcie-2025-12-18.xml  bcie.xml  iati-activities-am-armenia.xml  who-arg-back.xml  who-arg.xml  who-bra.xml  worldbank-679.xml  worldbank-sv.xml  wri-521257057-strategic-plan-2023-2027.xml  wri-org.xml
docs/: csv_converter_guide.md  csv_data_hierarchy.md  csv_data_org_hierarchy.md  csv_org_converter_guide.md  data_org_requirements.md  data_requirements.es.md  data_requirements.md
scripts/: csv_tools.py  release.py
src/okfn_iati/: __init__.py  csv_converter.py  enums.py  iati_schema_validator.py  models.py  multi_csv_converter.py  organisation_xml_generator.py  validators.py  xml_comparator.py  xml_generator.py
src/samples/: README.md
tests/: sample.xml  sample_activities.csv  test_activities_generated.xml  test_complex_xml.py  test_iati_roundtrip.py  test_location.py  test_org_names_optional.py  test_organisation_multi_csv_converter.py  test_organisation_xml_generator.py  test_sector_category.py  test_smoke_iati.py  test_usaid_generated.xml  test_validator.py  test_worldbank_xml.py  test_xml_generator.py
tests/csv_validators/: test_activities_validator.py  test_base_validator.py  test_budgets_validator.py  test_cross_file_validator.py  test_field_validators.py  test_folder_validator.py  test_models.py  test_remaining_validators.py  test_sectors_validator.py  test_transactions_validator.py
tests/full_xml/: test_caf_xml.py  test_complex_xml.py  test_usaid_xml.py  test_who_arg.py  test_worldbank_xml.py
tests/models/: test_activity.py  test_activity_date.py  test_budget.py  test_contact_info.py  test_document_link.py  test_iati_activities.py  test_location.py  test_models.py  test_narrative.py  test_organization_ref.py  test_participating_org.py  test_result.py  test_transaction.py
(+511 files in other folders)
