[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okfn-iati"
version = "0.1.0"
description = "IATI XML handler library for working with IATI 2.03 standard"
authors = [
    {name = "OKFN", email = "andres.vazquez@okfn.org"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "lxml>=4.9.0",  # Only needed for tests
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
