[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okfn-iati"
version = "0.1.0"
description = "IATI XML handler library for working with IATI 2.03 standard"
readme = "README.md"
authors = [
    {name = "OKFN", email = "andres.vazquez@okfn.org"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["iati", "xml", "development", "aid", "transparency"]

dependencies = [
    "lxml>=4.9.0",
]

[project.urls]
"Homepage" = "https://github.com/okfn/okfn_iati"
"Bug Tracker" = "https://github.com/okfn/okfn_iati/issues"
"Documentation" = "https://github.com/okfn/okfn_iati"
"Source Code" = "https://github.com/okfn/okfn_iati"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "lxml>=4.9.0",  # Only needed for tests
    "build>=0.8.0",  # For building package
    "twine>=4.0.0",  # For uploading to PyPI
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
